<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="characterViewModel"
                type="com.example.protolm.character.CharacterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/character_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".title.CharacterFragment">


        <TextView
                android:text="@string/personagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/char_label_1" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"/>
        <TextView
                android:text="@string/char_label_descricao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/char_label_2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/char_label_1"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/scroll" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/label_credits" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_done_char">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dexterity"
                        android:text="@{@string/character_value_format(characterViewModel.dexterity)}"
                        android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/plus"
                        android:id="@+id/dexpb"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/dexmin" app:layout_constraintStart_toStartOf="parent"
                        android:onClick="@{() ->characterViewModel.addDex()}"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/minus"
                        android:id="@+id/dexmin"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/dexpb"
                        app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                        android:onClick="@{() ->characterViewModel.removeDexterity()}"/>
                <TextView
                        android:text="@string/label_dexterity_dsc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/label_dexterity_dsc" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/dexpb"
                        android:textSize="14sp"  android:layout_marginEnd="16dp"
                        android:textAlignment="textStart"/>
                <TextView
                        android:text="@{@string/character_value_format(characterViewModel.life)}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/life"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_dexterity_dsc"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/plus"
                        android:id="@+id/lifepb"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_dexterity_dsc"
                        app:layout_constraintEnd_toStartOf="@+id/lifemin"
                        app:layout_constraintStart_toStartOf="parent"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/minus"
                        android:id="@+id/lifemin"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_dexterity_dsc"
                        app:layout_constraintStart_toEndOf="@+id/lifepb" app:layout_constraintHorizontal_bias="0.5"/>
                <TextView
                        android:text="@string/label_life_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/label_life_desc" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/lifepb" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp" android:textAlignment="textStart"/>
                <TextView
                        android:text="@{@string/character_value_format(characterViewModel.belief)}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/belief" android:textSize="30sp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_life_desc"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/plus"
                        android:id="@+id/beliefpb" android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_life_desc"
                        app:layout_constraintEnd_toStartOf="@+id/beliefmin" app:layout_constraintStart_toStartOf="parent"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/minus"
                        android:id="@+id/beliefmin" android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_life_desc"
                        app:layout_constraintStart_toEndOf="@+id/beliefpb" app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                        android:text="@string/label_belief_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/label_belief_desc" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/beliefpb" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp" android:textAlignment="textStart"/>
                <TextView
                        android:text="@string/label_talentos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/label_talentos" android:textSize="24sp"
                        android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/label_belief_desc"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                        android:text="@string/label_talents_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/label_talentos_desc" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_talentos" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                        android:textAlignment="textStart"/>
                <Switch
                        android:text="@string/label_critical_strike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_critical_strike" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_talentos_desc" android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        android:switchPadding="@dimen/eight_dp"/>
                <TextView
                        android:text="@string/label_critical_strike_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/label_critical_strike_desc" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/button_critical_strike" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"/>
                <Switch
                        android:text="@string/label_fast_regen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_fast_regeneration" android:textStyle="bold"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/label_critical_strike_desc"
                        app:layout_constraintStart_toStartOf="parent"
                        android:switchPadding="@dimen/eight_dp"/>
                <TextView
                        android:text="@string/label_fast_regen_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/label_fast_regen_desc"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/button_fast_regeneration" android:textAlignment="textStart"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
                <Switch
                        android:text="@string/button_precise_evaluation_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_precise_evaluation"
                        tools:text="@string/button_precise_evaluation_label" android:switchPadding="@dimen/eight_dp"
                        android:textStyle="bold" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/label_fast_regen_desc"
                        app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                        android:text="@string/label_precise_evaluation_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/button_precise_evaluation"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/label_precise_evaluation_desc" tools:text="@string/label_precise_evaluation_desc"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <TextView
                android:text="@{@string/character_value_format(characterViewModel.credits)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_credits" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/char_label_2" android:textSize="30sp"/>
        <Button
                android:text="@string/label_btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_done_char" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
